# fraud_detection_mlops

./: .gitignore  Dockerfile  README.md  decision_tree_model.pkl  push_to_ecr.sh  pyproject.toml  sample_data.py
.github/workflows/: main.yml
src/: app.py  app_fastapi.py  aws_deploy.py  inference.py  preprocess.py  test.py  test_api.py  train.py
tests/: decision_tree_model.pkl  sample_data.csv  test_all.py  test_preprocess.py
