[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Bharath Santhanam <bharathsanthanamdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "2.1.2"
seaborn = "0.13.2"
joblib = "1.4.2"
scikit-learn = "^1.5.2"  # Adding scikit-learn as it wasn't in your pip list but is used in the code
pandas = "2.2.3"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
ruff = "^0.6.9"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.1"
pylint = "^3.3.1"
ipdb = "^0.13.13"
